--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: 'poppins',sans-serif;
+    font-family: 'poppins', sans-serif;
 
 }
-body{
+
+body {
     color: #ededed;
     background: #081b29;
 }
-.header{
+
+.header {
     position: fixed;
     top: 0;
     left: 0;
@@ -24,10 +25,10 @@ body{
     z-index: 100;
 }
 
-.logo{
+.logo {
     position: relative;
     font-size: 25px;
-    color:#fff;
+    color: #fff;
     text-decoration: none;
     font-weight: 600;
     cursor: default;
@@ -35,10 +36,10 @@ body{
     animation: slideRight 1s ease forwards;
 }
 
-.navbar a{
+.navbar a {
     display: inline-block;
     font-size: 25px;
-    color :#fff;
+    color: #fff;
     text-decoration: none;
     font-weight: 500px;
     margin-left: 35px;
@@ -48,11 +49,11 @@ body{
     animation-delay: calc(.2s * var(--i));
 }
 
-.navbar a:hover{
-    color :#0ef; 
+.navbar a:hover {
+    color: #0ef;
 }
 
-.home{
+.home {
     position: relative;
     width: 100%;
     justify-content: space-between;
@@ -62,18 +63,18 @@ body{
     background-position: center;
     display: flex;
     align-items: center;
-    padding:70px 10% 0;
+    padding: 70px 10% 0;
 
 }
 
-.home-content{
+.home-content {
     max-width: 600px;
 }
 
-.home-content h3{
+.home-content h3 {
     font-size: 32px;
     font-weight: 700;
-    opacity:0;
+    opacity: 0;
     animation: slideBottom 1s ease forwards;
     animation-delay: .7s;
 }
@@ -83,39 +84,40 @@ body{
     animation: slideTop 1s ease forwards;
     animation-delay: .7s;
 }
-.home-content h3 span{
-    color:#0ef
+
+.home-content h3 span {
+    color: #0ef
 }
 
-.home-content h1{
+.home-content h1 {
     font-size: 56px;
     font-weight: 700;
-    margin : -3px 0;
+    margin: -3px 0;
     opacity: 0;
     animation: slideRight 1s ease forwards;
     animation-delay: 1s;
 }
 
-.home-content p{
+.home-content p {
     font-size: 20px;
     opacity: 0;
     animation: slideLeft 1s ease forwards;
     animation-delay: 1s;
 }
 
-.home-sci a{
+.home-sci a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 40px;
     height: 40px;
     background: transparent;
-    border:2px solid #0ef;
+    border: 2px solid #0ef;
     border-radius: 50%;
     font-size: 20px;
     color: #0ef;
     text-decoration: none;
-    transition: .5s  ease;
+    transition: .5s ease;
     opacity: 0;
     animation: slideLeft 1s ease forwards;
     animation-delay: calc(.2s * var(--i));
@@ -123,14 +125,14 @@ body{
 }
 
 
-.home-sci a:hover{
+.home-sci a:hover {
     background: #0ef;
     color: #081b29;
     box-shadow: 0 0 20px #0ef;
 }
 
 
-.btn-box{
+.btn-box {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
@@ -144,39 +146,40 @@ body{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px cyan,
-            0 0 25px cyan;
+        0 0 25px cyan;
 }
 
-.btn-box:hover{
-    box-shadow:0 0 5px cyan,
-    0 0 25px cyan,0 0 50px cyan,
-    0 0 100px cyan,0 0 200px cyan;
-    
+.btn-box:hover {
+    box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
+
 }
 
-.about{
+.about {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 1.5rem;
 }
-.about-img img{
-    padding-bottom:20%;
+
+.about-img img {
+    padding-bottom: 20%;
     max-width: 630px;
     height: auto;
     width: 100%;
     border-radius: 8px;
 }
 
-.about-text h2{
+.about-text h2 {
     font-size: 60px;
 }
 
-.about-text h2 span{
+.about-text h2 span {
     color: #0ef;
 }
 
-.about-text h4{
+.about-text h4 {
     font-size: 29px;
     font-weight: 600;
     color: #fff;
@@ -184,37 +187,128 @@ body{
     margin: 15px 0 30px;
 }
 
-.about-text p{
+.about-text p {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem;
 }
 
-#services{
-    color:aliceblue;
+#services {
+    color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem;
 }
-.sub-title{
+
+.sub-title {
     text-align: center;
     font-size: 60px;
     padding-bottom: 70px;
 }
-.sub-title span{
+
+
+.projects-showcase {
+    text-align: center;
+    padding: 60px 10%;
+}
+
+.projects-showcase h1 {
+    font-size: 50px;
+    color: white;
+    margin-bottom: 30px;
+}
+
+.project-showcase h1 span{
+    color:#0ef
+} 
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.project {
+    position: relative;
+    width: 100%;
+    border-radius: 8px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out;
+}
+
+.project:hover {
+    transform: translateY(-5px);
+}
+
+.project img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    transition: filter 0.3s ease-in-out;
+}
+
+.project:hover img {
+    filter: blur(5px) brightness(50%);
+}
+
+.project-info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    width: 80%;
+}
+
+.project:hover .project-info {
+    opacity: 1;
+}
+
+.project-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.project-desc {
+    font-size: 14px;
+    opacity: 0.9;
+}
+
+
+
+
+
+
+
+
+
+
+.sub-title span {
     color: #0ef;
 }
-.container{
-    padding:90px;
+
+.container {
+    padding: 90px;
 }
+
 .services-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.services-list div{
+
+.services-list div {
     background-color: transparent;
     padding: 40px;
     font-size: 13px;
@@ -223,9 +317,10 @@ body{
     border-radius: 20px;
     transition: background 0.5s, transform 0.5s;
     box-shadow: 1px 1px 20px #012290f7,
-                1px 1px 40px #0053b8f7;
+        1px 1px 40px #0053b8f7;
 }
-.services-list div i{
+
+.services-list div i {
     font-size: 50px;
     margin-bottom: 30px;
 
@@ -236,6 +331,7 @@ body{
     font-weight: 500;
     margin-bottom: 15px;
 }
+
 .services-list div a {
     text-decoration: none;
     color: #000;
@@ -243,7 +339,8 @@ body{
     margin-top: 20px;
     display: inline-block;
 }
-.read{
+
+.read {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
@@ -257,69 +354,76 @@ body{
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
-                0 0 25px #0ef;
+        0 0 25px #0ef;
 }
 
-.read:hover{
+.read:hover {
     box-shadow: 0 0 5px cyan,
-            0 0 25px cyan, 0 0 50px cyan,
-            0 0 100px cyan, 0 0 200px cyan;
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
 }
 
-.services-list div:hover{
+.services-list div:hover {
     transform: translateY(-10px);
 }
 
 
-section{
+section {
     display: flex;
     flex-wrap: wrap;
 }
-.container1{
-    width:600px;
-    height:500px;
+
+.container1 {
+    width: 600px;
+    height: 500px;
     padding: 75px 90px;
     margin-left: 120px;
 }
-.heading1{
+
+.heading1 {
     text-align: center;
     text-decoration: underline;
     text-underline-offset: 10px;
     text-decoration-thickness: 5px;
     margin-bottom: 50px;
 }
-.bar{
+
+.bar {
     font-size: 23px;
 }
 
-.Technical-bars .bar{
+.Technical-bars .bar {
     margin-top: 40px 0;
 }
 
-.Technical-bars .bar:first-child{
+.Technical-bars .bar:first-child {
     margin-top: 0;
 }
-.Technical-bars .bar:last-child{
+
+.Technical-bars .bar:last-child {
     margin-bottom: 0;
 }
-.Technical-bars .bar .info{
+
+.Technical-bars .bar .info {
     margin-bottom: 5px;
 }
-.Technical-bars .bar .info span{
+
+.Technical-bars .bar .info span {
     font-size: 17px;
     font-weight: 500;
     animation: showText 0.5s 1s linear forwards;
     opacity: 0;
 }
-.Technical-bars .bar .progress-line{
+
+.Technical-bars .bar .progress-line {
     position: relative;
     border-radius: 10px;
     width: 100%;
-    height:5px;
+    height: 5px;
     background-color: #000;
-    animation: animate 1s cubic-bezier(1,0,0.5,1) forwards;
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
     transform: scaleX(0);
-    transform-origin: left ;
+    transform-origin: left;
 }
 
 @keyframes animate {
@@ -329,18 +433,18 @@ section{
 }
 
 
-.Technical-bars .bar .progress-line span{
+.Technical-bars .bar .progress-line span {
     height: 100%;
     background-color: #0ef;
     position: absolute;
     border-radius: 10px;
-    animation: animate 1s 1s cubic-bezier(1,0,0.5,1) forwards;
+    animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
     transform: scaleX(0);
     transform-origin: left;
 }
 
-.progress-line.html span{
-    width:90%;
+.progress-line.html span {
+    width: 90%;
 }
 
 .progress-line.css span {
@@ -359,7 +463,7 @@ section{
     width: 75%;
 }
 
-.progress-line span::after{
+.progress-line span::after {
     position: absolute;
     padding: 1px 8px;
     background-color: #000;
@@ -373,24 +477,27 @@ section{
 
 }
 
-.progress-line.html span::after{
+.progress-line.html span::after {
     content: "90%";
 }
 
-.progress-line.css span::after{
+.progress-line.css span::after {
     content: "60%";
 }
-.progress-line.javascript span::after{
-    content: "85%" ;
-}
-.progress-line.cpp span::after{
-    content: "100%" ;
+
+.progress-line.javascript span::after {
+    content: "85%";
 }
 
-.progress-line.react span::after{
-    content: "75%" ;
+.progress-line.cpp span::after {
+    content: "100%";
 }
-.progress-line span::before{
+
+.progress-line.react span::after {
+    content: "75%";
+}
+
+.progress-line span::before {
     content: "";
     position: absolute;
     width: 0;
@@ -400,27 +507,28 @@ section{
     border-right-width: 0px;
     border-top-color: #000;
     top: -10px;
-    right :0;
+    right: 0;
     animation: showText 0.5s 1.5s linear forwards;
     opacity: 0;
 }
 
 @keyframes showText {
-    100%{
+    100% {
         opacity: 1;
     }
 }
 
 
-.radial-bars{
+.radial-bars {
     width: 100%;
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
 
 }
-.radial-bars .radial-bar{
+
+.radial-bars .radial-bar {
     width: 50%;
     height: 170px;
     margin-bottom: 10px;
@@ -428,93 +536,99 @@ section{
 
 }
 
-.radial-bars .radial-bar svg{
+.radial-bars .radial-bar svg {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50% , -50%) rotate(-90deg);
+    transform: translate(-50%, -50%) rotate(-90deg);
     width: 120px;
     height: 160px;
 }
 
-.radial-bars .radial-bar .progress-bar{
+.radial-bars .radial-bar .progress-bar {
     stroke-width: 10;
     stop-color: black;
     fill: transparent;
     stroke-dasharray: 502;
-    stroke-dashoffset: 502 ;
+    stroke-dashoffset: 502;
     stroke-linecap: round;
     animation: animate-bar 1s linear forwards;
 }
 
 @keyframes animate-bar {
-    100%{
+    100% {
         stroke-dashoffset: -1;
     }
 }
 
 .path {
     stroke-width: 10;
-    stroke:#0ef;
-    fill:transparent;
+    stroke: #0ef;
+    fill: transparent;
     stroke-dasharray: 502;
     stroke-dashoffset: 502;
     stroke-linecap: round;
 }
 
-.path-1{
+.path-1 {
     animation: animate-path1 1s 1s linear forwards;
 }
 
 .path-2 {
     animation: animate-path2 1s 1s linear forwards;
 }
+
 .path-3 {
     animation: animate-path3 1s 1s linear forwards;
 }
+
 .path-4 {
     animation: animate-path4 1s 1s linear forwards;
 }
 
 
 @keyframes animate-path1 {
-    100%{
-        stroke-dashoffset: 50;;
+    100% {
+        stroke-dashoffset: 50;
+        ;
     }
 }
 
 @keyframes animate-path2 {
     100% {
-        stroke-dashoffset: 175;;
+        stroke-dashoffset: 175;
+        ;
         ;
     }
 }
 
 @keyframes animate-path3 {
     100% {
-        stroke-dashoffset: 125;;
+        stroke-dashoffset: 125;
+        ;
         ;
     }
 }
 
 @keyframes animate-path4 {
     100% {
-        stroke-dashoffset: 75;;
+        stroke-dashoffset: 75;
+        ;
         ;
     }
 }
 
-.radial-bar .percentage{
+.radial-bar .percentage {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50% , -50%);
+    transform: translate(-50%, -50%);
     font-size: 17px;
     animation: showText 0.5s 1s linear forwards;
     opacity: 0;
 }
 
-.radial-bar .text{
+.radial-bar .text {
     width: 100%;
     position: absolute;
     text-align: center;
@@ -523,34 +637,38 @@ section{
     transform: translateX(-50px);
     font-size: 17px;
     font-weight: 500;
-    animation: showText 0.5s 1s linear forwards; 
+    animation: showText 0.5s 1s linear forwards;
     opacity: 0;
 }
 
 
 
 
-.main-text{
+.main-text {
     padding-top: 130px;
     margin-top: 200px;
 }
 
-.main-text h2{
+.main-text h2 {
     font-size: 60px;
     line-height: 1;
     text-align: center;
 }
 
-.main-text h2 span{
+.main-text h2 span {
     color: #0ef;
 }
 
-.portfolio-content{
+.portfolio-content {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(359px,auto));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    max-width: 1200px;
+    margin: auto;
 }
 
-.row{
+/* .row{
     position: relative;
     overflow: hidden;
     border-radius: 8px;
@@ -612,48 +730,135 @@ section{
 }
 .row:hover .layer{
     height: 100%;
+} */
+
+
+.row {
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
 }
 
-.contact{
+.row img {
+    width: 100%;
+    height: 200px;
+    border-radius: 8px;
+    display: block;
+    transition: transform 0.5s;
+    object-fit: cover;
+}
+
+.row:hover img {
+    transform: scale(1.1);
+}
+
+.row:hover .layer {
+    height: 100%;
+}
+
+.layer {
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.1), #0ef);
+    position: absolute;
+    border-radius: 8px;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0 40px;
+    transition: height 0.5s ease-in-out;
+}
+
+.layer h5 {
+    color: black;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.layer p {
+    color: black;
+    font-size: 1rem;
+    line-height: 1.8;
+}
+
+.layer i {
+    color: #ff004f;
+    margin-top: 20px;
+    font-size: 20px;
+    background: #fff;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+.contact {
     display: grid;
-    grid-template-columns: repeat(2 , 1fr);
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 3rem;
     padding-left: 30px;
     margin-top: 130px;
 }
-.contact-text h2{
+
+.contact-text h2 {
     font-size: 90px;
     line-height: 1;
     text-align: center;
 }
-.contact-text h2 span{
+
+.contact-text h2 span {
     color: #0ef;
 }
-.contact-text h4{
+
+.contact-text h4 {
     margin: 15px 0;
-    color: rgb(228,228,228);
+    color: rgb(228, 228, 228);
     font-size: 20px;
     font-weight: 600;
 }
-.contact-text p{
+
+.contact-text p {
     color: rgb(177, 177, 177);
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 2rem;
 }
-.contact-list{
+
+.contact-list {
     margin-bottom: 3rem;
 }
-.contact-list li{
+
+.contact-list li {
     margin-bottom: 10px;
     display: block;
 }
-.contact-list li{
+
+.contact-list li {
     margin-bottom: 10px;
     margin-bottom: block;
 }
-.contact-list i{
+
+.contact-list i {
     display: inline-block;
     color: #0ef;
     font-size: 20px;
@@ -661,12 +866,12 @@ section{
     transition: all .40s ease;
 }
 
- .contact-list li a:hover{
+.contact-list li a:hover {
     transform: scale(1.01) translateY(-5px);
     color: #0ef;
- }
+}
 
- .contact-icons i{
+.contact-icons i {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -682,19 +887,22 @@ section{
     transition: .5s ease;
     opacity: 0;
     animation: slideLeft 1s ease forwards;
-    animation-delay: calc(.2s * var(--i)); 
- }
+    animation-delay: calc(.2s * var(--i));
+}
 
- .contact-icons i:hover{
+.contact-icons i:hover {
     background: #0ef;
     color: #000;
     box-shadow: 0 0 20px #0ef;
 
- }
- .contact-form form{
+}
+
+.contact-form form {
     position: relative;
- }
- .contact-form form input,form textarea{
+}
+
+.contact-form form input,
+form textarea {
     border: none;
     outline: none;
     width: 90%;
@@ -706,14 +914,14 @@ section{
     margin-bottom: 0.5rem;
     border-radius: 0.5rem;
 
- } 
+}
 
- .contact-form textarea{
+.contact-form textarea {
     resize: none;
     height: 220px;
- }
+}
 
- .contact-form form .send{
+.contact-form form .send {
     display: inline-block;
     padding: 14px 60px;
     background: #0ef;
@@ -725,38 +933,40 @@ section{
     font-weight: 600;
     opacity: 0;
     animation: slideTop 1s ease forwards;
-    animation-delay:2s ;
+    animation-delay: 2s;
     box-shadow: 0 0 5px #0ef,
         0 0 25px #0ef;
- }
+}
 
- .contact-form form .send:hover{
+.contact-form form .send:hover {
     box-shadow: 0 0 5px cyan,
-     0 0 25px cyan,0 0 50px cyan,
-     0 0 100px cyan , 0 0 200px cyan;
- }
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
+}
 
- .last-text p{
+.last-text p {
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background: rgb(7,85,91);
+    background: rgb(7, 85, 91);
     font-weight: 300;
     margin-top: 70px;
- }
- .top{
+}
+
+.top {
     position: fixed;
     bottom: 2.1rem;
     right: 2.1rem;
- }
- .top i{
+}
+
+.top i {
     color: #000;
     background: #0ef;
     font-size: 20px;
     padding: 10px;
     border-radius: 0.5rem;
-      
- }
+
+}
 
 
 
@@ -778,11 +988,12 @@ section{
 
 
 
-@keyframes slideRight{
+@keyframes slideRight {
     0% {
         transform: translateX(-100px);
         opacity: 0;
     }
+
     100% {
         transform: translateX(0px);
         opacity: 1;
@@ -815,7 +1026,7 @@ section{
     }
 }
 
-@keyframes slideLeft  { 
+@keyframes slideLeft {
     0% {
         transform: translateX(100px);
         opacity: 0;
